--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -52,18 +52,14 @@ h1 {
     /* float: ; */
 }
 
-.myPageLeftDiv {
-    float: left;
-    height: 100%;
-    width: 25%;
-}
-
 .Register {
     text-align: center;
 }
 
-.myPageRightDiv {
-    float: left;
+.MyPage {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
 }
 
 .navDiv {
