--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -27,9 +27,9 @@ body {
     width: 700px;
 }
 
-.articleDiv {
+/* .articleDiv {
     float: left;
-}
+} */
 
 .articlePostButton {
     text-align: center;
@@ -43,6 +43,14 @@ body {
 
 .articlesDiv {
     float: left;
+}
+
+.articlesDiv > div > div> img {
+    height: 150px;
+}
+
+.articleDiv > img {
+    height: 150px;
 }
 
 .button {
@@ -60,10 +68,6 @@ body {
 
 .editAndDeleteButton {
     /* float: ; */
-}
-
-.Home {
-    text-align: center;
 }
 
 /* register page */
