--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -10,7 +10,7 @@
     margin-left: 5px;
 }
 
-.Article, .EditArticle, .MyPage, .Nav, .articleDiv, .Home, .Register, .SignIn, .Loading, .protected {
+.Article, .EditArticle, .MyPage, .Nav, .articleDiv, .Home, .Register, .SignIn, .Loading {
     grid-area: 2 / 2 / 3 / 3;
 }
 
@@ -51,6 +51,7 @@
 body {
     background-color: #ececec;
     color: #385170;
+    margin: 0;
 }
 
 .button {
@@ -68,21 +69,24 @@ body {
     padding: 10px 16px 9px;
 }
 
-h1 {
-    color: #385170;
-}
-
 h2 {
     color: #385170;
 }
 
 .header {
-    background-color: #ececec;
+    background: rgb(64,85,112);
+    background: radial-gradient(circle, rgba(64,85,112,1) 0%, rgba(56,81,112,1) 100%);
+    color: #ececec;
     background-size: cover;
     font-size: 60px;
     padding: 1px;
     text-align: center;
     grid-area: 1 / 1 / 2 / 4;
+    border-bottom: #000000 solid 3px;
+}
+
+.headerTitleSpan {
+    color: #9FD3C7;
 }
 
 .myBlogsH2 {
@@ -93,7 +97,7 @@ h2 {
 .myPost {
         position: fixed;
         min-width: 250px;
-        top: 32%;
+        top: 40%;
         right: 10px;
         border: 3px solid #385170;
         border-radius: 10px;
@@ -105,7 +109,7 @@ h2 {
 
 .Nav {
     position: fixed;
-    top: 32%;
+    top: 40%;
     left: 10px;
     border: 3px solid #385170;
     border-radius: 10px;
