--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -8,6 +8,10 @@
     margin-left: 20px;
 }
 
+.Article {
+    margin-top: 10px;
+}
+
 .ArtCardTitle {
     text-align: left;
     margin-top: 0px;
@@ -68,8 +72,31 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-.button {
+.button, .add-comment-button, .reply, .editArticleButton, .like, .dislike, .editButton, .registerButton, .signInButton {
     text-align: center;
+    background-color: #385170;
+    border: 1px solid transparent;
+    border-radius: .75rem;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-size: 14px;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 500;
+    line-height: 10px;
+    padding: 10px 25px;
+    text-decoration: none #6B7280 solid;
+    transition-duration: .2s;
+    transition-property: background-color,border-color,color,fill,stroke;
+    width: auto;
+}
+
+button:hover {
+  background-color: #374151;
+}
+
+button:active {
+    color: #9FD3C7;
 }
 
 .commentDiv {
@@ -86,6 +113,19 @@ body {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.dot {
+    color: #9FD3C7;
+}
+
+.editButton {
+    margin-left: 10px;
+}
+
+.editArticleButton {
+    margin-bottom: 10px;
+}
+
 .emailContainer{
     padding: 10px 16px 9px;
 }
@@ -116,9 +156,6 @@ h2 {
     border: solid #385170;
     border-radius: 10px;
     margin-bottom: 5px;
-    
-    
-    
 }
 
 .like {
