--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,11 +1,22 @@
 .add-comment-image {
     margin-right: 20px;
     margin-bottom: 10px;
+}
 
+.add-comment-text, .add-comment-image, .comment-reply-image, .comment-reply-name {
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 15px;
+    border-bottom: 1px solid #000000;
+    width: 200px;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 .add-comment-button {
     margin-left: 20px;
+    
 }
 
 .Article {
@@ -158,7 +169,7 @@ h2 {
     margin-bottom: 5px;
 }
 
-input[type=text], .add-comment-image {
+input[type=text] {
     padding: 6px;
     border: none;
     margin-top: 8px;
