--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -16,7 +16,7 @@
 
 .add-comment-button {
     margin-left: 20px;
-    
+    margin-bottom: 10px;
 }
 
 .Article {
@@ -72,10 +72,6 @@
     max-height: 400px;
 }
 
-.articleTitle {
-    margin-left: 16px;
-}
-
 .App {
     display: grid;
     grid-template-columns: .2fr .6fr .2fr;
@@ -124,6 +120,11 @@ button:hover {
 
 button:active {
     color: #9FD3C7;
+}
+
+button:disabled {
+    cursor: not-allowed;
+    opacity: 0.65; 
 }
 
 .commentDiv {
@@ -189,7 +190,6 @@ input[type=text] {
     padding: 6px;
     border: none;
     margin-top: 8px;
-    margin-right: 16px;
     font-size: 17px;
     border-bottom: 1px solid #000000;
     width: 255px;
@@ -201,7 +201,6 @@ input[type=text] {
     padding: 6px;
     border: none;
     margin-top: 8px;
-    margin-right: 16px;
     font-size: 17px;
     border-bottom: 1px solid #000000;
     width: 255px;
@@ -273,6 +272,20 @@ input[type=text] {
 
 .signInButton {
     margin-top: 10px;
+}
+
+.thumbUp, .thumbDown {
+    height: 20px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.thumbUp:hover, .thumbDown:hover{
+   color: #9FD3C7;
+}
+
+.thumbUp:active, .thumbDown:active{
+   transform: translateY(1px);
 }
 
 .usernameContainer{
