seperated buttons on edit article page

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -126,6 +126,7 @@ body {
     transition-duration: .2s;
     transition-property: background-color,border-color,color,fill,stroke;
     width: auto;
+    margin-left: 7px;
 }
 
 button:hover {
