--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,37 @@
+/* ***** Sticky Nav ***** */
+.navbar{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    transition: all .7s ease-in;
+    
+    /* top: 40%; */
+    margin-left: 10px;
+    border: 3px solid #385170;
+    border-radius: 10px;
+    margin-top: 10px;
+    padding: 5px;
+    background: rgb(255, 243, 243);
+    background: radial-gradient(circle, rgba(236,236,236,1) 0%, rgb(218, 216, 216) 53%);
+    max-height: 300px;
+    max-width: 200px;
+}
+
+.scrolled{
+    position: fixed;
+    /* top: 0; */
+    /* left: 10px; */
+    border: 3px solid #385170;
+    border-radius: 10px;
+    padding: 5px;
+    background: rgb(255, 243, 243);
+    background: radial-gradient(circle, rgba(236,236,236,1) 0%, rgb(218, 216, 216) 53%);
+    min-height: 300px;
+    min-width: 200px;
+}
+/* ********************* */
+
 .add-comment-image {
     margin-right: 20px;
     margin-bottom: 10px;
