Created notification page

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,9 @@
+.notify-title{
+    font-weight: bold;
+    display: inline;
+    cursor: pointer;
+}
+
 /* ***** Sticky Nav ***** */
 .navbar{
     display: flex;
