--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -325,10 +325,11 @@ input[type=password] {
 
 .modal-content {
 	background-color: white;
-	height: 350px;
+	height: fit-content;
 	width: 550px;
 	border-radius: 2px;
 	margin: 150px auto;
+    padding: 0 15px 10px 15px;
 	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     transform: translateY(-200px);
     transition: all 0.3s ease-in-out;
